Update 'h3f7aapu3-go' component image to: quay.io/rhtap_qe/rhtap-qe:584d589ad437b1a498252b0fff87e3996b6f01f3@sha256:2aafc6beac9237dbf3332142e0c5427c847424aa6511a751548a24255a961caa

--- a/components/h3f7aapu3-go/overlays/development/deployment-patch.yaml
+++ b/components/h3f7aapu3-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: h3f7aapu3-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:584d589ad437b1a498252b0fff87e3996b6f01f3@sha256:2aafc6beac9237dbf3332142e0c5427c847424aa6511a751548a24255a961caa
+          name: container-image
